@@ -5,6 +5,7 @@ dev:
 - Added MC5001, a variant of MC5000 using the 3 input, 3 output layout
 - Improved block source system for bridges, gates, etc.
 - Added support for custom ICs using existing PLC languages.
+- Added /listics command.
 
 1.4:
 - Added MC5000, a programmable logic chip utilizing the PerlStone
